# blog-serverless

./: .gitignore  README.md  package-lock.json  package.json  sample.serverless.yml
.github/workflows/: deploy-serverless.yml
blog-cronjob/: .gitignore  README.md  deploy.sh  log_handler.py  main.py  package-lock.json  package.json  pyproject.toml  serverless.yml
