[tool.poetry]
name = "jobs"
version = "0.1.0"
description = ""
authors = ["Anh Huy <phamanhhuy22@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.4.0"
kombu = {extras = ["boto3"], version = "^5.4.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
